--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {deps, [
-{mongodb,".*",{git,"https://github.com/emqtt/mongodb-erlang","v3.0.2"}},{ecpool,".*",{git,"https://github.com/emqtt/ecpool","master"}}
+{mongodb,".*",{git,"https://github.com/emqtt/mongodb-erlang","v3.0.2"}},{ecpool,".*",{git,"https://github.com/emqtt/ecpool","v0.4.2"}}
 ]}.
 {erl_opts, [{parse_transform,lager_transform}]}.
