--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,10 @@
 {deps, [
 {mongodb,".*",{git,"https://github.com/emqtt/mongodb-erlang","v3.0.2"}},{ecpool,".*",{git,"https://github.com/emqtt/ecpool",{tag,"v0.2.1"}}}
 ]}.
-{erl_opts, [{parse_transform,lager_transform}]}.
+{erl_opts, [warn_unused_vars,
+            warn_shadow_vars,
+            warn_unused_import,
+            warn_obsolete_guard,
+            debug_info,
+            {parse_transform,lager_transform}]}.
+
