--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {deps, [
-{mongodb,".*",{git,"https://github.com/emqtt/mongodb-erlang","v3.0.2"}},{ecpool,".*",{git,"https://github.com/emqtt/ecpool",{tag,"v0.2.1"}}}
+{mongodb,".*",{git,"https://github.com/emqtt/mongodb-erlang","v3.0.2"}},
+{ecpool, {git,"https://github.com/emqx/ecpool", {tag, "v0.4.2"}}}
 ]}.
 {erl_opts, [warn_unused_vars,
             warn_shadow_vars,
