--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
 {mongodb,".*",{git,"https://github.com/emqtt/mongodb-erlang","v3.0.2"}},
-{ecpool, ".*", {git,"https://github.com/TIotti/ecpool/", "c637a98ab62808b4886ecf35c98346eae44cb918"}}
+{ecpool, ".*", {git,"https://github.com/TIotti/ecpool/", "master"}}
 ]}.
 {erl_opts, [warn_unused_vars,
             warn_shadow_vars,
